--- a/leehyunsoo/phantomJs/scrapy.cfg
+++ b/leehyunsoo/phantomJs/scrapy.cfg
@@ -4,8 +4,8 @@
 # https://scrapyd.readthedocs.io/en/latest/deploy.html
 
 [settings]
-default = phantomJS.settings
+default = phantomJs.settings
 
 [deploy]
 #url = http://localhost:6800/
-project = phantomJS
+project = phantomJs
